# mavica-tools

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  TODO.md  TUI_PLAN.md  mavica-db.tsv  mavica-floppy-troubleshooting.md  mavica.spec  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
mavica_tools/: __init__.py  __main__.py  camera_detect.py  carve.py  check.py  cli.py  detect.py  diagnose.py  diskcheck.py  export.py  fat12.py  format.py  fun.py  gps.py  history.py  importcmd.py  mavica_db.py  multipass.py  recover.py  repair.py  report.py  stamp.py  swaptest.py  terminal_image.py  thumb411.py  utils.py
mavica_tools/tui/: __init__.py  app.py
mavica_tools/tui/screens/: carve.py  check.py  diskcheck_screen.py  export_screen.py  fat12_screen.py  format_screen.py  gps_screen.py  home.py  import_workflow.py  multipass.py  recover_image_screen.py  recover_screen.py  recovery_workflow.py  repair.py  stamp_screen.py  swaptest.py  thumb411_screen.py  troubleshoot.py  workflow.py
mavica_tools/tui/widgets/: defrag_map.py  drive_input.py  file_picker.py  image_preview.py  sector_map.py  track_map.py
scripts/: generate_screenshots.py  lint.py
tests/: build_fixtures.py  conftest.py  test_carve.py  test_check.py  test_cli_e2e.py  test_detect.py  test_export.py  test_fat12.py  test_format.py  test_fun.py  test_gps.py  test_history.py  test_import.py  test_integration.py  test_multipass.py  test_packaging.py  test_recover.py  test_repair.py  test_report.py  test_stamp.py  test_swaptest.py  test_terminal_image.py  test_thumb411.py  test_tui.py
tests/fixtures/: MVC-001F.411  MVC-002F.411  MVC-004F.411  MVC-006F.411  MVC-015F.411  MVC-016F.411  disk_bad_sectors.img  disk_deleted_files.img  disk_truncated.img  disk_with_photos.img  track_2001-07-04.gpx
