[project]
name = "mavica-tools"
version = "0.3.1"
description = "Floppy disk recovery and troubleshooting toolkit for Sony Mavica cameras"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.14"
keywords = ["mavica", "floppy", "recovery", "jpeg", "sony", "camera", "retro"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: System :: Recovery Tools",
    "Topic :: Utilities",
]
dependencies = [
    "Pillow>=9.0",
    "textual>=0.50",
    "piexif>=1.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.15.8",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/gyng/mavica-tools"
Repository = "https://github.com/gyng/mavica-tools"
Issues = "https://github.com/gyng/mavica-tools/issues"

[project.scripts]
mavica = "mavica_tools.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",    # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]  # imports after pytest.importorskip() guards

[tool.ruff.lint.isort]
known-first-party = ["mavica_tools"]

[tool.mypy]
python_version = "3.14"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = false

[[tool.mypy.overrides]]
module = "mavica_tools.tui.*"
ignore_errors = true
